# Lem_in

./: CMakeLists.txt  author
includes/: validator.h
libft/: ft_atoi.c
libft/includes/: libft.h
libft/printf/: Makefile  array.c  csp.c  decimal.c  decimal_print.c  float.c  float_get_print.c  ft_itoa.c  ft_printf.c  ft_putchar.c  ft_putnstr.c  ft_refill.c  ft_strjoin.c  ft_strlen.c  ft_transform.c  hexadecimal.c  hexadecimal_print.c  num_sys.c  num_sys10.c  num_sys11.c  num_sys12.c  num_sys2.c  num_sys3.c  num_sys4.c  num_sys5.c  num_sys6.c  num_sys7.c  num_sys8.c  num_sys9.c  octal.c  octal_print.c  operations.c  parse.c  pointer.c  printf.h  unsigned.c  unsigned_print.c  validation.c
srcs/GetNextLine/: get_next_line.h
srcs/Lem-in/: Makefile  algo_array_of_rooms.c  algo_calc_input_output.c  algo_check_from_end_sort_childs_of_end.c  algo_del_child.c  algo_input_fork.c  algo_move_ants.c  algo_prepare.c  algo_search_path.c  bfs.c  comments.c  create_and_fill_data.c  free.c  free_add.c  main.c  print.c  validator.c  validator_get_coordinates.c  validator_links.c  validator_rooms.c
